welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:3: error: illegal start of simple pattern
		case if (a>=10 && a<=20 && b>=10 && b<=20) => return Math.max(a,b)
                     ^max1020:4: error: '=>' expected but ';' found.
		case if (a>=10 && a<=20 && (b<10 || b>20)) => return a
^max1020:4: error: illegal start of simple pattern
		case if (a>=10 && a<=20 && (b<10 || b>20)) => return a
                     ^max1020:5: error: '=>' expected but ';' found.
		case if (b>=10 && b<=20 && (a<10 || a>20)) => return b
^max1020:5: error: illegal start of simple pattern
		case if (b>=10 && b<=20 && (a<10 || a>20)) => return b
                     ^max1020:6: error: '=>' expected but ';' found.
		case if (!(a>=10 && a<=20 && b>=10 && b<=20)) => return 0
^max1020:6: error: illegal start of simple pattern
		case if (!(a>=10 && a<=20 && b>=10 && b<=20)) => return 0
                     ^max1020:7: error: '=>' expected but '}' found.
	}
        ^